tests/fixtures/invalid/extern_array_unbound_result_index.gcl
// A result array must reuse an index variable that indexes some parameter:
// a plugin can never invent its output length (the dynamic-index fence).
import plugin "graphcal:demo" as demo {
    fn make<D: Dim, I: Index>(x: D) -> D[I];
}

node y: Velocity[3] = demo.make(1.0 m/s);
